cmake_minimum_required(VERSION 2.8.11)

SET(MYSQLPP_VERSION_MAJOR 3)
SET(MYSQLPP_VERSION_MINOR 1)
SET(MYSQLPP_VERSION_BUGFIX 5)

PROJECT(mysqlpp)

SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

OPTION(MYSQLPP_XCODE "" ON)
OPTION(SHARED_BUILD "shared build" OFF)
OPTION(STATIC_BUILD "static build" ON)

ADD_SUBDIRECTORY(lib)
